--- a/style/header.scss
+++ b/style/header.scss
@@ -1,6 +1,3 @@
-@import "variables";
-@import "library";
-
 header {
   font-family: $header-font;
   margin: 0 0 $spacing;
@@ -12,7 +9,7 @@ header {
   background: $primary-color;
   border: 0;
   color: $white;
-  font-family: $main-font;
+  font-family: $logo-font;
   font-weight: bold;
   float: left;
   padding: 8px 16px;
